# Anagram_Solver

./: CMakeLists.txt  README.md  anagrams.h  lowerCase.c  lowerCase.h  main.c  missingAnagrams.c  missingAnagrams.h  outputText.c  outputText.h  quicksortFile.c  sizes.h.gch
InputFiles/: output.txt
code/: anagrams.c  fileIO.c  fileIO.h  quicksortFile.h  sizes.h
